--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ APP_URL=https://nextart.test
 APP_ADMIN_PATH=admin
 APP_ADMIN_EMAIL=
 APP_TIMEZONE=UTC
-
+FILESYSTEM_DRIVER=public
 PHP_PROC_OPEN=true
 
 DB_CONNECTION=mysql
