--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "aerni/laravel-spotify": "^1.4",
     "anhskohbo/no-captcha": "^3.2",
     "ashallendesign/laravel-exchange-rates": "^3.0",
-    "barryvdh/laravel-dompdf": "v2.0.0",
+    "barryvdh/laravel-dompdf": "*",
     "chillerlan/php-qrcode": "^4.3",
     "darryldecode/cart": "^4.2",
     "doctrine/dbal": "^2.0",
@@ -32,6 +32,8 @@
     "league/flysystem-cached-adapter": "^1.1",
     "maatwebsite/excel": "^3.1",
     "mews/purifier": "^3.3",
+    "nextart-info/laravel-selfupdater": "4.0",
+    "nextart-info/translation": "^2.0",
     "orangehill/iseed": "^2.6.3",
     "paypal/rest-api-sdk-php": "*",
     "pbmedia/laravel-ffmpeg": "^6.0",
